Change from style.visibility to style.display to fix invisible scrollbars blocking mouseover and making easier to manage DOM children visibility

--- a/css/ui-equipment.css
+++ b/css/ui-equipment.css
@@ -25,6 +25,7 @@
 	color: #fff;
 	font-size: 12px;
 	z-index: 98;
+	display: none;
 }
 
 #unitlist
@@ -51,7 +52,7 @@
 	border-radius: 5px;
 	background-repeat: no-repeat;
 	z-index:98;
-	visibility: hidden;
+	display: none;
 	overflow: hidden;
 	float: left;	
 }
@@ -127,7 +128,7 @@
 #eqUpgradeBut {	background-image: url('../resources/ui/dialogs/equipment/images/upgrade.png'); }
 #eqNewBut {	background-image: url('../resources/ui/dialogs/equipment/images/buy.png'); }
 
-#eqUserSel { z-index: 0; visibility: hidden; width:0px; height: 0px;}
+#eqUserSel { z-index: 0; display:none; width:0px; height: 0px;}
 
 #currentPrestige /* Where the current player prestige is displayed */
 {
